[KConfig] Use TPD by default on P2012
Since the P2012 platform integration support is not yet stable, by
default we use TPD when conpiling BOSP from scratch.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/Kconfig
+++ b/Kconfig
@@ -13,6 +13,7 @@ endchoice
 
 config BBQUE_TEST_PLATFORM_DATA
   bool "Use Test Platform Data (TPD)"
+  default y if TARGET_ANDROID
   default n
   ---help---
   Build the BarbequeRTRM with support for Test Platform Data.
