[BospShell] Discard ATerm errors
Each time aterm is started it try to add an entry to /var/run/utmp, which
requires root permissions. This addition could be inhibited by using the
"-ut" flag, but this seem not working.
Thus, for the time being, we simply discard all warning/error messages
generated by aterm.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bosp_init.env.in
+++ b/config/bosp_init.env.in
@@ -143,7 +143,8 @@ rm -rf $SYSROOT/@BBQUE_PATH_VAR@/*
 FONT=-misc-fixed-medium-r-normal--10-100-75-75-c-60-iso10646-1
 function bosp-shell {
 	aterm +sb -fn $FONT -geometry 118x37+711+240 -title "BBQUE Shell"  \
-			-e /bin/bash --init-file $SYSROOT/etc/bbque/bosp_init.env &
+			-e /bin/bash --init-file $SYSROOT/etc/bbque/bosp_init.env \
+			&>/dev/null &
 }
 
 ################################################################################
@@ -226,7 +227,8 @@ function bbque-log {
 LOG="${1:-$BBQUE_LOGFILE}"
 echo "Opening barbeque logfile [$LOG]..."
 aterm +sb -fn $FONT -geometry 115x56+-9-17 -title "BBQUE Log [$LOG]" \
-	-e tail -n+1 -f $LOG &
+	-e tail -n+1 -f $LOG \
+	&>/dev/null &
 }
 
 function bbque-plot {
@@ -266,7 +268,8 @@ TRG="${1:-Numa}"
 echo "Starting 2PARMA Demo2, Target [$TRG]..."
 aterm +sb -fn $FONT -geometry 125x30+705-17 \
 		-title "BBQUE v0.8 (Betty Bacon) - 2PARMA Demo2 [Target $TRG]" \
-		-e bbque-2parma-demo2 $TRG &
+		-e bbque-2parma-demo2 $TRG \
+		&>/dev/null &
 }
 
 function 2parma-demo3 {
@@ -274,7 +277,8 @@ TRG="${1:-Numa}"
 echo "Starting 2PARMA Demo3, Target [$TRG]..."
 aterm +sb -fn $FONT -geometry 125x30+705-17 \
 		-title "BBQUE v0.8 (Betty Bacon) - 2PARMA Demo3 [Target $TRG]" \
-		-e bbque-2parma-demo3 $TRG &
+		-e bbque-2parma-demo3 $TRG \
+		&>/dev/null &
 }
 
 ################################################################################
