--- a/tools/bbqueConsole.sh.in
+++ b/tools/bbqueConsole.sh.in
@@ -229,7 +229,8 @@ chmod a+x $BBQUE_SYSROOT/var/bbque/BbqConsole_CGroups.sh
 
 # The System log
 aterm +sb -fn $FONT -geometry 115x18+-9+18 -title "Syslog" \
-	-e tail -f /var/log/syslog &
+	-e tail -f /var/log/syslog \
+	&>/dev/null &
 
 ################################################################################
 #     Right Panel
@@ -238,14 +239,17 @@ aterm +sb -fn $FONT -geometry 115x18+-9+18 -title "Syslog" \
 # Display CGROUPs configuration
 aterm +sb -cr black -fn $FONT -geometry 74x30--9+18 \
 	-title "BOSP Resources Monitor" \
-	-e $BBQUE_SYSROOT/var/bbque/BbqConsole_CGroups.sh &
+	-e $BBQUE_SYSROOT/var/bbque/BbqConsole_CGroups.sh \
+	&>/dev/null &
 # Display of managed TASKSs configuration
 aterm +sb -cr black -fn $FONT -geometry 74x41--8+363 \
 	-title "BOSP Tasks Monitor" \
-	-e $BBQUE_SYSROOT/var/bbque/BbqConsole_Resources.sh &
+	-e $BBQUE_SYSROOT/var/bbque/BbqConsole_Resources.sh \
+	&>/dev/null &
 # Display CPUs usages (by HTOP)
 aterm +sb -fn $FONT -geometry 74x20--7-30 -title "CPUs usages" \
-	-e htop &
+	-e htop \
+	&>/dev/null &
 
 ################################################################################
 #     Center Panel
