--- a/demos/bbque2PARMADemo2.sh.in
+++ b/demos/bbque2PARMADemo2.sh.in
@@ -131,10 +131,12 @@ read KEY
 
 echo "A.1 - Starting 2 High-Prio apps..."
 aterm +sb -fn $FONT -geometry 102x16+9+18 -title "DemoApp #01 (HP)" \
-	-e $BBQUE_SYSROOT/usr/bin/bbque-demoapp -e 1 -t 4 -r BbqDemo${BBQUE_HOST}_0B  &
+	-e $BBQUE_SYSROOT/usr/bin/bbque-demoapp -e 1 -t 4 -r BbqDemo${BBQUE_HOST}_0B \
+	&>/dev/null &
 sleep $BBQUE_START_DELAY
 aterm +sb -fn $FONT -geometry 102x16+9+224 -title "DemoApp #02 (HP)" \
-	-e $BBQUE_SYSROOT/usr/bin/bbque-demoapp -e 2 -t 4 -r BbqDemo${BBQUE_HOST}_0B  &
+	-e $BBQUE_SYSROOT/usr/bin/bbque-demoapp -e 2 -t 4 -r BbqDemo${BBQUE_HOST}_0B \
+	&>/dev/null &
 sleep $BBQUE_START_DELAY
 
 
@@ -152,16 +154,20 @@ read KEY
 
 echo "A.2 - Starting 4 Mid-Prio apps..."
 aterm +sb -fn $FONT -geometry 102x16+675+18 -title "DemoApp #11 (MP)" \
-	-e $BBQUE_SYSROOT/usr/bin/bbque-demoapp -e 3 -t 4 -r BbqDemo${BBQUE_HOST}_1B  &
+	-e $BBQUE_SYSROOT/usr/bin/bbque-demoapp -e 3 -t 4 -r BbqDemo${BBQUE_HOST}_1B \
+	&>/dev/null &
 sleep $BBQUE_START_DELAY
 aterm +sb -fn $FONT -geometry 102x16+675+224 -title "DemoApp #12 (MP)" \
-	-e $BBQUE_SYSROOT/usr/bin/bbque-demoapp -e 4 -t 4 -r BbqDemo${BBQUE_HOST}_1B  &
+	-e $BBQUE_SYSROOT/usr/bin/bbque-demoapp -e 4 -t 4 -r BbqDemo${BBQUE_HOST}_1B \
+	&>/dev/null &
 sleep $BBQUE_START_DELAY
 aterm +sb -fn $FONT -geometry 102x16+675+421 -title "DemoApp #13 (MP)" \
-	-e $BBQUE_SYSROOT/usr/bin/bbque-demoapp -e 5 -t 4 -r BbqDemo${BBQUE_HOST}_1B  &
+	-e $BBQUE_SYSROOT/usr/bin/bbque-demoapp -e 5 -t 4 -r BbqDemo${BBQUE_HOST}_1B \
+	&>/dev/null &
 sleep $BBQUE_START_DELAY
 aterm +sb -fn $FONT -geometry 102x16+675+618 -title "DemoApp #14 (MP)" \
-	-e $BBQUE_SYSROOT/usr/bin/bbque-demoapp -e 6 -t 4 -r BbqDemo${BBQUE_HOST}_1B  &
+	-e $BBQUE_SYSROOT/usr/bin/bbque-demoapp -e 6 -t 4 -r BbqDemo${BBQUE_HOST}_1B \
+	&>/dev/null &
 sleep $BBQUE_START_DELAY
 
 echo "Check on the \"Task monitor\" that all 6 application are running and:"
@@ -266,16 +272,20 @@ read KEY
 
 echo "D.1 - Starting 4 Low-Prio apps..."
 aterm +sb -fn $FONT -geometry 102x16--9+18 -title "DemoApp #21 (LP)" \
-	-e $BBQUE_SYSROOT/usr/bin/bbque-demoapp -e 7 -t 4 -r BbqDemo${BBQUE_HOST}_2S  &
+	-e $BBQUE_SYSROOT/usr/bin/bbque-demoapp -e 7 -t 4 -r BbqDemo${BBQUE_HOST}_2S \
+	&>/dev/null &
 sleep $BBQUE_START_DELAY
 aterm +sb -fn $FONT -geometry 102x16--9+224 -title "DemoApp #22 (LP)" \
-	-e $BBQUE_SYSROOT/usr/bin/bbque-demoapp -e 8 -t 4 -r BbqDemo${BBQUE_HOST}_2S  &
+	-e $BBQUE_SYSROOT/usr/bin/bbque-demoapp -e 8 -t 4 -r BbqDemo${BBQUE_HOST}_2S \
+	&>/dev/null &
 sleep $BBQUE_START_DELAY
 aterm +sb -fn $FONT -geometry 102x16--9+421 -title "DemoApp #23 (LP)" \
-	-e $BBQUE_SYSROOT/usr/bin/bbque-demoapp -e 9 -t 4 -r BbqDemo${BBQUE_HOST}_2S  &
+	-e $BBQUE_SYSROOT/usr/bin/bbque-demoapp -e 9 -t 4 -r BbqDemo${BBQUE_HOST}_2S \
+	&>/dev/null &
 sleep $BBQUE_START_DELAY
 aterm +sb -fn $FONT -geometry 102x16--9+618  -title "DemoApp #24 (LP)" \
-	-e $BBQUE_SYSROOT/usr/bin/bbque-demoapp -e 10 -t 4 -r BbqDemo${BBQUE_HOST}_2S  &
+	-e $BBQUE_SYSROOT/usr/bin/bbque-demoapp -e 10 -t 4 -r BbqDemo${BBQUE_HOST}_2S \
+	&>/dev/null &
 sleep $BBQUE_START_DELAY
 
 echo "Now a saturated system condition has been established, 6 apps are running, two"
@@ -311,7 +321,8 @@ read KEY
 
 echo "E.1 - Starting a new HP application"
 aterm +sb -fn $FONT -geometry 102x16+-9+18 -title "DemoApp #03 (HP)" \
-	-e $BBQUE_SYSROOT/usr/bin/bbque-demoapp -e 1 -t 4 -r BbqDemo${BBQUE_HOST}_0B  &
+	-e $BBQUE_SYSROOT/usr/bin/bbque-demoapp -e 1 -t 4 -r BbqDemo${BBQUE_HOST}_0B \
+	&>/dev/null &
 sleep $BBQUE_START_DELAY
 
 
