[Demo_2PARMA] Add OCVDemo1
This is a scenarios which represent the capabilities of BarbequeRTRM
to support run-time adaptation while considering applications priorities.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -19,3 +19,14 @@ install(PROGRAMS "${PROJECT_BINARY_DIR}/demos/bbque2PARMADemo3.sh"
 	DESTINATION ${BBQUE_PATH_APPS}
 	COMPONENT BarbequeDEMOS
 	RENAME bbque-2parma-demo3)
+
+#----- Deploy the 2PARMA OCVDemo1 script
+configure_file (
+	"${PROJECT_SOURCE_DIR}/demos/bbque2PARMAOCVDemo1.sh.in"
+	"${PROJECT_BINARY_DIR}/demos/bbque2PARMAOCVDemo1.sh"
+	@ONLY
+)
+install(PROGRAMS "${PROJECT_BINARY_DIR}/demos/bbque2PARMAOCVDemo1.sh"
+	DESTINATION ${BBQUE_PATH_APPS}
+	COMPONENT BarbequeDEMOS
+	RENAME bbque-2parma-ocvdemo1)
