[SchedPol] Switch to MODULE_CONFIG
The MODULE_CONFIG macro is defined for each BBQ plugin which is build
starting from the plugin interface macro SCHEDULER_POLICY_CONFIG.
This patch makes use of this definition to define the prefix of all
module specific configuration options.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bbque.conf.in
+++ b/config/bbque.conf.in
@@ -33,15 +33,17 @@
 ################################################################################
 # Yams Scheduling Policy: Metrics Contribute weights
 ################################################################################
-[MetricsContribute]
 # Global parameters [0,100]
+[SchedPol.yams]
 msl.pe               = 75
 msl.mem              = 90
 awmvalue.weight      = 20
 reconfig.weight      = 5
 congestion.weight    = 5
 fairness.weight      = 10
+
 # Contribute specific parameters
+[SchedPol.Contrib]
 awmvalue.penalty.pe    = 100
 awmvalue.penalty.mem   = 100
 reconfig.migfact       = 5
