--- a/config/bbque.conf.in
+++ b/config/bbque.conf.in
@@ -35,24 +35,32 @@
 ################################################################################
 # Global parameters [0,100]
 [SchedPol.yams]
-msl.pe               = 75
-msl.mem              = 90
 awmvalue.weight      = 20
 reconfig.weight      = 5
 congestion.weight    = 5
 fairness.weight      = 10
 
-# Contribute specific parameters
+# Contribution specific parameters
 [SchedPol.Contrib]
-awmvalue.penalty.pe    = 100
-awmvalue.penalty.mem   = 100
-reconfig.migfact       = 5
-congestion.expbase     = 2
-congestion.penalty.pe  = 25
-congestion.penalty.mem = 25
-fairness.expbase       = 5
-fairness.penalty.pe    = 10
-fairness.penalty.mem   = 10
+msl.pe        = 75
+msl.mem       = 90
+
+[SchedPol.Contrib.awmvalue]
+penalty.pe    = 100
+penalty.mem   = 100
+
+[SchedPol.Contrib.reconfig]
+migfact       = 5
+
+[SchedPol.Contrib.congestion]
+expbase       = 2
+penalty.pe    = 25
+penalty.mem   = 25
+
+[SchedPol.Contrib.fairness]
+expbase       = 5
+penalty.pe    = 10
+penalty.mem   = 10
 
 ################################################################################
 # Synchronization Manager Options
