[RM] Add support for periodic optimizations
The scheduling of resources to applications could be configured to be
periodically triggered once every "opt_interval". This interval could
be defined in [ms] by a proper configuration file option.
A value of 0[ms], which is the default, could be used to disable the periodic
optimization thus using just an event based activation.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bbque.conf.in
+++ b/config/bbque.conf.in
@@ -25,6 +25,12 @@
 #fif.dir = ${CONFIG_BOSP_RUNTIME_RWPATH}
 
 ################################################################################
+# Resource Manager Options
+################################################################################
+[ResourceManager]
+#opt_interval = 0
+
+################################################################################
 # Scheduler Manager Options
 ################################################################################
 [SchedulerManager]
