--- a/config/bbque.conf_dbg.in
+++ b/config/bbque.conf_dbg.in
@@ -25,6 +25,12 @@
 #fif.dir = ${CONFIG_BOSP_RUNTIME_RWPATH}
 
 ################################################################################
+# Resource Manager Options
+################################################################################
+[ResourceManager]
+#opt_interval = 0
+
+################################################################################
 # Scheduler Manager Options
 ################################################################################
 [SchedulerManager]
