[Configure] Use same log file for debugging version
A DEBUG build of the BarbequeRTRM uses, by default, a different
configuration file. However, the produced logfile, by default is the
same of the one produced by the RELEASE version, and it refers to the
default/bbqued configuration option.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bbque.conf_dbg.in
+++ b/config/bbque.conf_dbg.in
@@ -124,7 +124,7 @@ appender.raConsole = org.apache.log4j.ConsoleAppender
 appender.raConsole.layout = org.apache.log4j.PatternLayout
 appender.raConsole.layout.ConversionPattern = %d{%Y-%m-%d %H:%M:%S,%l} - %-6p %-15c : %m%n
 appender.raFile = org.apache.log4j.FileAppender
-appender.raFile.fileName = ${CONFIG_BOSP_RUNTIME_RWPATH}/bbque_dbg.log
+appender.raFile.fileName = ${CONFIG_BOSP_RUNTIME_RWPATH}/${BBQUE_DAEMON_LOGFILE}
 appender.raFile.layout = org.apache.log4j.PatternLayout
 appender.raFile.layout.ConversionPattern = %d{%Y-%m-%d %H:%M:%S,%l} - %-6p %-15c : %m%n
 #appender.raSyslog = org.apache.log4j.SyslogAppender
