--- a/plugins/schedpol/contrib/CMakeLists.txt
+++ b/plugins/schedpol/contrib/CMakeLists.txt
@@ -4,7 +4,7 @@
 ##
 
 # Add sources in the current directory to the target binary
-set (METRICS_CONTRIB_SRC metrics_contribute)
+set (METRICS_CONTRIB_SRC sched_contrib ${METRICS_CONTRIB_SRC})
 set (METRICS_CONTRIB_SRC mct_value ${METRICS_CONTRIB_SRC})
 set (METRICS_CONTRIB_SRC mct_reconfig ${METRICS_CONTRIB_SRC})
 set (METRICS_CONTRIB_SRC mct_congestion ${METRICS_CONTRIB_SRC})
