[SCM] Scheduling Contributions Manager
Add the class SchedContribManager to manage the set of SchedContrib used
by the scheduling policy.

The major benefits introduced are:
1) No needs to replicate code for management of scheduling contributions
   into every scheduling policy.
2) Flexibility: a scheduling policy can choose a subset of contributions
   for its metrics.

Signed-off-by: Giuseppe Massari <joe.massanga@gmail.com>

--- a/plugins/schedpol/contrib/CMakeLists.txt
+++ b/plugins/schedpol/contrib/CMakeLists.txt
@@ -4,6 +4,7 @@
 ##
 
 # Add sources in the current directory to the target binary
+set (METRICS_CONTRIB_SRC sched_contrib_manager)
 set (METRICS_CONTRIB_SRC sched_contrib ${METRICS_CONTRIB_SRC})
 set (METRICS_CONTRIB_SRC mct_value ${METRICS_CONTRIB_SRC})
 set (METRICS_CONTRIB_SRC mct_reconfig ${METRICS_CONTRIB_SRC})
