[SchedPol_YaMS] SP uses scheduling contributions manager
For the management of the scheduling contributions (once
"MetricsContribute") now the policy uses a suitable manager instance.

Signed-off-by: Giuseppe Massari <joe.massanga@gmail.com>

--- a/config/bbque.conf.in
+++ b/config/bbque.conf.in
@@ -40,7 +40,7 @@
 # Yams Scheduling Policy: Metrics Contribute weights
 ################################################################################
 # Global parameters [0,100]
-[SchedPol.yams]
+[SchedPol.Contrib]
 awmvalue.weight      = 20
 reconfig.weight      = 5
 congestion.weight    = 5
