[SchedPol] Align naming conventions
Alignment of the naming conventions in the building variables, according to
the renaming of MetricsContribute to SchedContrib.

Signed-off-by: Giuseppe Massari <joe.massanga@gmail.com>

--- a/plugins/schedpol/CMakeLists.txt
+++ b/plugins/schedpol/CMakeLists.txt
@@ -24,7 +24,7 @@ set(PLUGIN_YAMS_SRC  yams_schedpol yams_plugin)
 add_library(bbque_schedpol_yams MODULE ${PLUGIN_YAMS_SRC})
 target_link_libraries(
 	bbque_schedpol_yams
-	bbque_sched_metrics
+	bbque_sched_contribs
 	${Boost_LIBRARIES}
 )
 install(TARGETS bbque_schedpol_yams LIBRARY
