--- a/plugins/schedpol/contrib/CMakeLists.txt
+++ b/plugins/schedpol/contrib/CMakeLists.txt
@@ -4,14 +4,14 @@
 ##
 
 # Add sources in the current directory to the target binary
-set (METRICS_CONTRIB_SRC sched_contrib_manager)
-set (METRICS_CONTRIB_SRC sched_contrib ${METRICS_CONTRIB_SRC})
-set (METRICS_CONTRIB_SRC sc_value ${METRICS_CONTRIB_SRC})
-set (METRICS_CONTRIB_SRC sc_reconfig ${METRICS_CONTRIB_SRC})
-set (METRICS_CONTRIB_SRC sc_congestion ${METRICS_CONTRIB_SRC})
-set (METRICS_CONTRIB_SRC sc_fairness ${METRICS_CONTRIB_SRC})
+set (SCHED_CONTRIB_SRC sched_contrib_manager)
+set (SCHED_CONTRIB_SRC sched_contrib ${SCHED_CONTRIB_SRC})
+set (SCHED_CONTRIB_SRC sc_value ${SCHED_CONTRIB_SRC})
+set (SCHED_CONTRIB_SRC sc_reconfig ${SCHED_CONTRIB_SRC})
+set (SCHED_CONTRIB_SRC sc_congestion ${SCHED_CONTRIB_SRC})
+set (SCHED_CONTRIB_SRC sc_fairness ${SCHED_CONTRIB_SRC})
 
 # Add as library
-add_library(bbque_sched_metrics STATIC ${METRICS_CONTRIB_SRC})
-set_target_properties(bbque_sched_metrics PROPERTIES LINKER_LANGUAGE CXX)
+add_library(bbque_sched_contribs STATIC ${SCHED_CONTRIB_SRC})
+set_target_properties(bbque_sched_contribs PROPERTIES LINKER_LANGUAGE CXX)
 
