--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,11 +104,11 @@ if (NOT CMAKE_BUILD_TYPE)
 endif (NOT CMAKE_BUILD_TYPE)
 
 # Add flags common to all builds
-set (BOSP_CPP11 "c++0x")
+set (BOSP_CPP11 "0x")
 if (GCC_TAG GREATER "46")
-	set (BOSP_CPP11 "c++11")
+	set (BOSP_CPP11 "11")
 endif (GCC_TAG GREATER "46")
-set (CMAKE_CXX_FLAGS "-Wall -std=${BOSP_CPP11}")
+set (CMAKE_CXX_FLAGS "-Wall -std=c++${BOSP_CPP11} -std=gnu++${BOSP_CPP11}")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DGCC_VERSION=${GCC_VERSION}")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DGCC_TAG=${GCC_TAG}")
 
@@ -122,7 +122,7 @@ endif (CONFIG_TARGET_LINUX)
 # Add "Android-Linux" specific flags
 if (CONFIG_TARGET_ANDROID)
 set (BBQUE_TARGET_OS "Android-Linux")
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++0x -I../../../out/include -D__ARM_ARCH_5__ -D__ARM_ARCH_5T__ -D__ARM_ARCH_5E__ -D__ARM_ARCH_5TE__ -D__STDINT_LIMITS -D_GLIBCXX_USE_C99_STDINT_TR1 -D__BIONIC__ -Wno-psabi -march=armv5te -mtune=xscale -msoft-float -fexceptions -frtti -mthumb -fomit-frame-pointer -fno-strict-aliasing -finline-limit=64 -DANDROID  -Wa,--noexecstack")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../../../out/include -D__ARM_ARCH_5__ -D__ARM_ARCH_5T__ -D__ARM_ARCH_5E__ -D__ARM_ARCH_5TE__ -D__STDINT_LIMITS -D_GLIBCXX_USE_C99_STDINT_TR1 -D__BIONIC__ -Wno-psabi -march=armv5te -mtune=xscale -msoft-float -fexceptions -frtti -mthumb -fomit-frame-pointer -fno-strict-aliasing -finline-limit=64 -DANDROID  -Wa,--noexecstack")
 # -ffunction-sections -fdata-sections -Wl,--gc-sections - REMOVED becaus of missing symbols
 endif (CONFIG_TARGET_ANDROID)
 
