[BuildSystem] Add some headers
These header files are required when GCC 4.7 is used for build.

Signed-off-by: Marco Minutoli <mminutoli@gmail.com>
Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/include/bbque/config.h.in
+++ b/include/bbque/config.h.in
@@ -29,7 +29,8 @@
 
 #include <syslog.h>
 #define  __STDC_FORMAT_MACROS
-#include <inttypes.h>
+#include <cinttypes>
+#include <unistd.h>
 
 /** Use Boost Filesyste library version 3 */
 #define BOOST_FILESYSTEM_VERSION 3
